--- a/examples/production-es.html
+++ b/examples/production-es.html
@@ -44,7 +44,7 @@
        * definition 工具函数描述
        * implementation 工具函数，必须返回描述结果的字符串
        */
-       registerTools([
+      registerTools([
         {
           definition: {
             type: 'function',
@@ -63,10 +63,7 @@
                     description: '到达城市',
                   },
                 },
-                required: [
-                  'departure_city',
-                  'arrival_city',
-                ],
+                required: ['departure_city', 'arrival_city'],
               },
             },
           },
